// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contact-image Basic renders as expected 1`] = `
<svg
  height={60}
  viewBox="0 0 108 108"
  width={60}
>
  <circle
    cx="53"
    cy="54"
    fill="#ada0ea"
    r="45"
  />
  <rect
    fill="#9179e8"
    height="28.539"
    rx="8.674"
    ry="8.674"
    transform="rotate(.605 41.25 59.125)"
    width="31.021"
    x="25.742"
    y="44.852"
  />
  <path
    d="M29.114 79.175L55.156 56 29 55.724l.114 23.451z"
    fill="#9179e8"
  />
  <rect
    fill="#784def"
    height="33.502"
    rx="8.608"
    ry="8.608"
    transform="rotate(.605 56.866 49.362)"
    width="44.67"
    x="34.532"
    y="32.608"
  />
  <path
    d="M69.805 75.432L39.181 47l31.353.331-.729 28.101z"
    fill="#784def"
  />
  <circle
    cx="45"
    cy="49"
    fill="#fff"
    r="3"
    transform="rotate(-89.395 45 49)"
  />
  <circle
    cx="56"
    cy="49"
    fill="#fff"
    r="3"
    transform="rotate(-89.395 56 49)"
  />
  <circle
    cx="67"
    cy="49"
    fill="#fff"
    r="3"
    transform="rotate(-89.395 67 49)"
  />
</svg>
`;

exports[`contact-image Bigger icon renders as expected 1`] = `
<svg
  height={120}
  viewBox="0 0 108 108"
  width={120}
>
  <circle
    cx="53"
    cy="54"
    fill="#ada0ea"
    r="45"
  />
  <rect
    fill="#9179e8"
    height="28.539"
    rx="8.674"
    ry="8.674"
    transform="rotate(.605 41.25 59.125)"
    width="31.021"
    x="25.742"
    y="44.852"
  />
  <path
    d="M29.114 79.175L55.156 56 29 55.724l.114 23.451z"
    fill="#9179e8"
  />
  <rect
    fill="#784def"
    height="33.502"
    rx="8.608"
    ry="8.608"
    transform="rotate(.605 56.866 49.362)"
    width="44.67"
    x="34.532"
    y="32.608"
  />
  <path
    d="M69.805 75.432L39.181 47l31.353.331-.729 28.101z"
    fill="#784def"
  />
  <circle
    cx="45"
    cy="49"
    fill="#fff"
    r="3"
    transform="rotate(-89.395 45 49)"
  />
  <circle
    cx="56"
    cy="49"
    fill="#fff"
    r="3"
    transform="rotate(-89.395 56 49)"
  />
  <circle
    cx="67"
    cy="49"
    fill="#fff"
    r="3"
    transform="rotate(-89.395 67 49)"
  />
</svg>
`;
